// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlavorStash /> can get collapsed Icon 1`] = `
<FontAwesomeIcon
  className="mr-2 arrow--down"
  icon="chevron-left"
  rotation={270}
/>
`;

exports[`<FlavorStash /> can get expanded Icon 1`] = `
<FontAwesomeIcon
  className="mr-2 arrow--up"
  icon="chevron-left"
  rotation={90}
/>
`;

exports[`<FlavorStash /> can get in stash button 1`] = `
<Unknown
  onClick={[Function]}
  title="Remove from Stash"
  value={true}
  variant="check"
/>
`;

exports[`<FlavorStash /> can get not in stash button 1`] = `
<Unknown
  onClick={[Function]}
  title="Add to Stash"
  value={false}
  variant="check"
/>
`;

exports[`<FlavorStash /> can get stash edit icon 1`] = `
<React.Fragment>
  <Button
    active={false}
    className="button-animation"
    disabled={false}
    onClick={[Function]}
    size="sm"
    type="button"
    variant="primary"
  >
    <FontAwesomeIcon
      icon="pen"
      size="sm"
      title="Edit Details"
    />
  </Button>
</React.Fragment>
`;

exports[`<FlavorStash /> can handleStashEditor 1`] = `undefined`;

exports[`<FlavorStash /> can hide stash edit icon 1`] = `<React.Fragment />`;

exports[`<FlavorStash /> can render 1`] = `
<div
  className="container"
>
  <div
    className="text-center row"
  >
    <div
      className="col"
    >
      <h1>
        Flavor Stash
      </h1>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="mb-1 card"
      >
        <div
          className="border-bottom cursor--pointer card-body"
          onClick={[Function]}
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <h3
                className={null}
                id="flavor-undefined"
              >
                <i
                  className="fa chevron-left"
                />
                 
                Sweet Cream
                 (
                CAP
                )
              </h3>
            </div>
            <div
              className="text-center col"
            >
              <h4>
                <strong>
                  Use:
                </strong>
                 
                NaN - NaN
                %
              </h4>
            </div>
            <div
              className="text-right col"
            >
              <h5>
                Added: 
                12/31/2019
              </h5>
            </div>
          </div>
        </div>
      </div>
      <div
        className="mb-1 card"
      >
        <div
          className="border-bottom cursor--pointer card-body"
          onClick={[Function]}
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <h3
                className={null}
                id="flavor-undefined"
              >
                <i
                  className="fa chevron-left"
                />
                 
                Tatanka
                 (
                FLV
                )
              </h3>
            </div>
            <div
              className="text-center col"
            >
              <h4>
                <strong>
                  Use:
                </strong>
                 
                NaN - NaN
                %
              </h4>
            </div>
            <div
              className="text-right col"
            >
              <h5>
                Added: 
                12/31/2019
              </h5>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FlavorStash /> can render with an empty stash 1`] = `
<div
  className="container"
>
  <div
    className="text-center row"
  >
    <div
      className="col"
    >
      <h1>
        Flavor Stash
      </h1>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="text-center col"
      >
        Navigate to
         
        <a
          href="/flavors"
          onClick={[Function]}
          title="Flavors"
        >
          Flavors
        </a>
         
        to add to your Flavor Stash.
      </div>
    </div>
  </div>
</div>
`;
